--- a/configs/trainer/ddp.yaml
+++ b/configs/trainer/ddp.yaml
@@ -1,13 +1,9 @@
 defaults:
   - default.yaml
 
-# use "ddp_spawn" instead of "ddp",
-# it's slower but normal "ddp" currently doesn't work ideally with hydra
-# https://github.com/facebookresearch/hydra/issues/2070
-# https://pytorch-lightning.readthedocs.io/en/latest/accelerators/gpu_intermediate.html#distributed-data-parallel-spawn
-strategy: ddp_spawn
+trainer:
+  accelerator: gpu
+  devices: ${trainer.devices}
+  sync_batchnorm: True
 
-accelerator: gpu
-devices: 4
-num_nodes: 1
-sync_batchnorm: True
+devices: 1
