--- a/configs/model/network/JEPAAny_multi.yaml
+++ b/configs/model/network/JEPAAny_multi.yaml
@@ -11,7 +11,7 @@ instance:
     predictor_embed_dim: ${model.network.encoder.embed_dim}
     out_dim: ${model.network.encoder.embed_dim}
     depth: 4
-    num_heads: 16
+    num_heads: ${model.network.encoder.num_heads}
     mlp_ratio: 4.0
     attn_drop_rate: 0.0
     drop_path_rate: 0.0
