--- a/configs/model/loss/CAPI.yaml
+++ b/configs/model/loss/CAPI.yaml
@@ -1,17 +1,5 @@
 # @package _global_
 
-model.network.instance.predictor.out_dim: ${model.loss.num_classes}
-
-model.network.target_head:
-  _target_: src.models.networks.encoder.utils.capi.OnlineClustering
-  in_dim: ${model.network.encoder.embed_dim}
-  out_dim: ${model.loss.num_classes}
-  bias: True
-  n_sk_iter: 3
-  target_temp: 0.06
-  pred_temp: 0.12
-  target: ${model.loss.target} 
-
 model:
   loss:
     _target_: models.losses.Losses
@@ -20,3 +8,18 @@ model:
     }
     modalities: ${modalities}
     num_classes: 1024*4
+
+  target_head:
+    _target_: src.models.networks.encoder.utils.capi.OnlineClusteringHead
+    in_dim: ${model.network.encoder.embed_dim}
+    out_dim: ${model.loss.num_classes}
+    bias: True
+    n_sk_iter: 3
+    target_temp: 0.06
+    pred_temp: 0.12
+    target: sinkhorn
+
+  network:
+    instance:
+      predictor:
+        out_dim: ${model.loss.num_classes}
